package protocol;

//握手验证
message Handshake{
	required string token= 1;
}
message StartGame{
	optional  bool start = 1;
}
//manaul
message ChessManaul{
	required bytes manaul= 1;
}
//是否命中
message HitChess{
	required bool hit = 1;
required uint32 x = 2;
	required uint32 y = 3;
}
//是否输赢
message	WinGame{
	required bool win = 1;
}
//下棋坐标
message ChessLocation{
	required uint32 x = 1;
	required uint32 y = 2;
}
//结束访问
message CloseConnect{
	optional  bool start = 1;
}